<?xml version="1.0"?>
<package format="2">
  <name>servo_msgs</name>
  <version>0.1.1</version>
  <description>The servo_msgs package is for custom servo messages</description>

  <maintainer email="philip@thehopleys.me.uk">Philip Hopley</maintainer>

  <license>BSD</license>

  <author email="philip@thehopleys.me.uk">Philip Hopley</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
 
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
